--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -18,7 +18,7 @@
     
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
-            <div class="navbar-header">
+            <div class="navbar-header" id="nav-header">
                 <a href="" class="navbar-brand"><img style="width: 50x; height: 50px;" src="/naturtea-template/asset/img/icon/logo.png"></a>
                 <a href="" class="navbar-brand"><h1><b>NatureTea.</b></h1></a>
             </div>
