--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" href="/naturtea-template/asset/style/navbar.css">
     <link rel="stylesheet" type="text/css" href="/naturtea-template/asset/style/naturtea.css">
     <link rel="stylesheet" type="text/css" href="/naturtea-template/asset/style/footer.css">
+    <link rel="stylesheet" type="text/css" href="/naturtea-template/asset/style/font.css">
     <link rel="stylesheet" type="text/css" href="/naturtea-template/asset/css/fontawesome/css/fontawesome.min.css">
     <link rel="stylesheet" type="text/css" href="/naturtea-template/asset/css/fontawesome/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="/naturtea-template/asset/css/fontawesome/css/brands.min.css">
@@ -20,10 +21,10 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="navbar">
         <div class="container">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="http://localhost/naturtea-template/"><h1><b>NaturTea</b></h1></a>
+            <div class="navbar-header" id="nav-header">
+                <a class="navbar-brand" href="http://localhost/naturtea-template/"><h1 class="parajud">NaturTea.</h1></a>
             </div>
             <button class="navbar-toggler" data-target="#navItem" data-toggle="collapse"><i class="navbar-toggler-icon"></i></button>
             <div class="collapse navbar-collapse" id="navItem">
@@ -35,7 +36,7 @@
                         <a href="" class="nav-link dropdown-toggle" data-target="dropItem1" data-toggle="dropdown">Sosial Media</a>
                         <ul class="dropdown-menu">
                             <li class="dropdown-item">
-                                <a href="" class="nav-link"><i class="fab fa-instagram"></i> @NaturTea.id</a>
+                                <a href="" class="nav-link"><i class="fab fa-instagram"></i> NaturTea.id</a>
                             </li>
                             <li class="dropdown-item">
                                 <a href="" class="nav-link"><i class="fab fa-facebook"></i> NaturTea.id</a>
@@ -52,7 +53,7 @@
                                 <a href="" class="nav-link"><i class="fab fa-whatsapp"></i> WhatsApp</a>
                             </li>
                             <li class="dropdown-item">
-                                <a href="" class="nav-link"><i class="fa fa-phone"></i> +62 812 2538 9904</a>
+                                <a href="" class="nav-link unique"><i class="fa fa-phone"></i> +62 812 2538 9904</a>
                             </li>
                         </ul>
                     </li>
@@ -66,13 +67,13 @@
     <header class="parallax">
         <div class="container">
             <div class="parallax-content text-center">
-                <h1><strong>NaturTea.</strong></h1>
-                <h3>NaturTea adalah website template bertema tanaman teh.</h3>
-                <a href="/naturtea-template/dashboard/" class="btn btn-outline-success rounded-pill py-3 px-5">Kunjungi Halaman <i class="fa fa-arrow-right"></i></a>
+                <h1 class="parajud">NaturTea.</h1>
+                <h3 class="paracon">NaturTea adalah website template bertema tanaman teh.</h3>
+                <a href="/naturtea-template/dashboard/" class="btn btn-outline-success rounded-pill py-3 mt-5 px-5">Kunjungi Halaman <i class="fa fa-arrow-right"></i></a>
             </div>
         </div>
     </header>
-    <div class="pemisah rounded-pill text-center">
+    <div class="pemisah rounded text-center">
         <h2 class="py-4">Tentang NaturTea</h2>
     </div>
     <section>
@@ -85,8 +86,8 @@
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
-                        <h2 class="display-4">NaturTea</h2>
-                        <p>NaturTea adalah template website sederhana bertemakan teh. Website ini terinspirasi dari tanyangan berita di tv.</p>
+                        <h2 class="parajud display-4">NaturTea...</h2>
+                        <p class="support">NaturTea adalah template website sederhana bertemakan teh. Website ini terinspirasi dari tanyangan berita di tv.</p>
                     </div>
                 </div>
             </div>
@@ -102,8 +103,8 @@
                 </div>
                 <div class="col-lg-6 order-lg-2">
                     <div class="p-5">
-                        <h2 class="display-4">NaturTea...</h2>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat iure necessitatibus, repudiandae libero unde perferendis in iste illo fuga sunt, aperiam perspiciatis! Obcaecati doloribus cum non. Distinctio, eveniet dolor? Cum.</p>
+                        <h2 class="parajud display-4">NaturTea...</h2>
+                        <p class="support">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat iure necessitatibus, repudiandae libero unde perferendis in iste illo fuga sunt, aperiam perspiciatis! Obcaecati doloribus cum non. Distinctio, eveniet dolor? Cum.</p>
                     </div>
                 </div>
             </div>
@@ -119,8 +120,8 @@
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
-                        <h2 class="display-4">Lorem...</h2>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit exercitationem est, repellendus molestiae architecto odit voluptatibus pariatur, atque, ipsum quam veniam blanditiis similique ad! Ducimus provident optio facilis nulla ipsam.</p>
+                        <h2 class="parajud display-4">Lorem...</h2>
+                        <p class="support">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit exercitationem est, repellendus molestiae architecto odit voluptatibus pariatur, atque, ipsum quam veniam blanditiis similique ad! Ducimus provident optio facilis nulla ipsam.</p>
                     </div>
                 </div>
             </div>
@@ -153,19 +154,17 @@
                 </div>
                 <div class="col-md-4">
                     <h2 class="display-6">Filosofi Teh</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat dolorem voluptate atque quasi, officiis ratione nisi architecto eius inventore soluta impedit. Velit nesciunt officia iste mollitia magni maxime cumque aliquid.</p>
+                    <p class="support">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat dolorem voluptate atque quasi, officiis ratione nisi architecto eius inventore soluta impedit. Velit nesciunt officia iste mollitia magni maxime cumque aliquid.</p>
                 </div>
             </div>
         </div>
         <div class="logo">
             <div class="container">
-                <div class="row align-items-center">
-                    <div class="col">
-                        <ul class="list-unstyled">
-                            <li>
-                                <a href="" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
-                            </li>
-                        </ul>
+                <div class="row text-center">
+                    <div style="font-size: 25px; letter-spacing: 1cm; padding: 0.3cm ;" class="col logogo">
+                        <a href="" target="_blank" rel="noopener noreferrer"><i style="color: rgb(255, 0, 43);" class="fab fa-instagram"></i></a>
+                        <a href="" target="_blank" rel="noopener noreferrer"><i style="color: rgb(0, 0, 168);" class="fab fa-facebook"></i></a>
+                        <a href="" target="_blank" rel="noopener noreferrer"><i style="color: red;" class="fab fa-youtube"></i></a>
                     </div>
                 </div>
             </div>
@@ -175,6 +174,7 @@
         </div>
     </footer>
     
+    <script src="/naturtea-template/asset/style/navbar.js"></script>
     <script src="/naturtea-template/asset/js/fontawesome.min.js"></script>
     <script src="/naturtea-template/asset/js/jquery-3.4.1.min.js"></script>
     <script src="/naturtea-template/asset/js/popper.min.js"></script>
