--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </li>
                     <li class="nav-item dropdown">
                         <a href="" class="nav-link dropdown-toggle" data-target="dropItem1" data-toggle="dropdown">Sosial Media</a>
-                        <ul class="dropdown-menu">
+                        <ul class="dropdown-menu mt-0">
                             <li class="dropdown-item">
                                 <a href="" class="nav-link"><i class="fab fa-instagram"></i> NaturTea.id</a>
                             </li>
@@ -49,7 +49,7 @@
                     <li class="nav-item dropdown">
                         <a href="" class="nav-link dropdown-toggle" data-toggle="dropdown" data-target="#dropItem2">Kontak</a>
                         <ul class="dropdown-menu mr-5">
-                            <li class="dropdown-item">
+                            <li class="dropdown-item mt-0">
                                 <a href="" class="nav-link"><i class="fab fa-whatsapp"></i> WhatsApp</a>
                             </li>
                             <li class="dropdown-item">
