--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -9,6 +9,10 @@
     <title>Naturtea-Template</title>
 
     <link rel="stylesheet" href="/naturtea-template/asset/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/naturtea-template/asset/style/dash.css">
+    <link rel="stylesheet" href="/naturtea-template/asset/style/font.css">
+    <link rel="stylesheet" href="/naturtea-template/asset/style/navbar.css">
+    <link rel="stylesheet" href="/naturtea-template/asset/style/footer.css">
     <link rel="stylesheet" href="/naturtea-template/asset/css/fontawesome/css/fontawesome.min.css">
     <link rel="stylesheet" href="/naturtea-template/asset/css/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="/naturtea-template/asset/css/fontawesome/css/brands.min.css">
@@ -16,11 +20,11 @@
 </head>
 <body>
     
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="navbar">
         <div class="container">
             <div class="navbar-header" id="nav-header">
                 <a href="" class="navbar-brand"><img style="width: 50x; height: 50px;" src="/naturtea-template/asset/img/icon/logo.png"></a>
-                <a href="" class="navbar-brand"><h1><b>NatureTea.</b></h1></a>
+                <a href="" class="navbar-brand"><h1 class="parajud">NatureTea.</h1></a>
             </div>
             <button class="navbar-toggler" data-target="#navItem" data-toggle="collapse"><i class="navbar-toggler-icon"></i></button>
             <div class="collapse navbar-collapse" id="navItem">
@@ -56,25 +60,204 @@
         </div>
     </nav>
 
-    <div class="row pt-5">
-        <div class="col-sm-9">
-            <div class="bungkuskonten">
-            <div class="konten">
-                <div class="container">
-                    <p>SIDE KIRI.</p>
-                </div>
+    <div id="carouselTea" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselTea" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselTea" data-slide-to="1"></li>
+            <li data-target="#carouselTea" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img class="caroimg" src="/naturtea-template/asset/img/gmbr/teh1.jpg" alt="slide 1">                
+            <div class="carousel-caption">
+                <h1 class="unique">NaturTea.</h1>
+                <p class="support">Desain Elegan.</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img class="caroimg" src="/naturtea-template/asset/img/gmbr/teh2.jpg" alt="slide 2">
+            <div class="carousel-caption">
+                <h1 class="unique">NaturTea.</h1>
+                <p class="support">Desain Ringan.</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img class="caroimg" src="/naturtea-template/asset/img/gmbr/teh3.jpg" alt="slide 3">
+            <div class="carousel-caption">
+                <h1 class="unique">NaturTea.</h1>
+                <p class="support">Desain Responsive.</p>
             </div>
         </div>
     </div>
+        <a class="carousel-control-prev" href="#carouselTea" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselTea" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+    </div>
+    <div class="row" id="body">
+        <div class="col-sm-9">
+            <div class="bungkuskonten">
+                <div class="konten">
+                    <div class="container">
+                        <div class="banner rounded text-center pt-5 border-dark border-right border-bottom">
+                            <h2 class="support">NaturTea.</h2>
+                            <p class="unique">NaturTea adalah template website tema tanaman teh.</p>
+                        </div>
+                        <div class="card mt-5">
+                            <img src="/naturtea-template/asset/img/gmbr/artikel.jpeg" alt="" class="card-img-top border-dark border-right border-bottom">
+                            <div class="card-body">
+                                <h2 class="card-title unique">Pengembangan Lahan Kebun Teh Semakin Berkembang.</h2>
+                                <p class="card-text support">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad excepturi ratione, aspernatur, est enim culpa impedit maxime rem suscipit laborum iste ea deleniti asperiores, pariatur error? Autem quo aliquam quis.</p>
+                                <a href="" class="btn btn-outline-success pemisah baca">Baca Selengkapnya</a>
+                            </div>
+                        </div>
+                        <div class="card mt-5">
+                            <img src="/naturtea-template/asset/img/gmbr/artikel.jpeg" alt="" class="card-img-top border-dark border-right border-bottom">
+                            <div class="card-body">
+                                <h2 class="card-title unique">Pengembangan Lahan Kebun Teh Semakin Berkembang.</h2>
+                                <p class="card-text support">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti sequi a debitis magni nihil. Delectus quos culpa, cum quisquam consectetur dolor minima corporis deleniti fugiat distinctio sit repudiandae nostrum reiciendis.</p>
+                                <a href="" class="btn btn-outline-success pemisah baca">Baca Selengkapnya</a>
+                            </div>
+                        </div>
+                        <div class="card mt-5">
+                            <img src="/naturtea-template/asset/img/gmbr/artikel.jpeg" alt="" class="card-img-top border-dark border-right border-bottom">
+                            <div class="card-body">
+                                <h2 class="card-title unique">Pengembangan Lahan Kebun Teh Semakin Berkembang.</h2>
+                                <p class="card-text support">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis deserunt, accusantium quibusdam ea consectetur atque natus tempora et pariatur ullam optio, voluptatum recusandae perferendis libero. Non voluptatem est impedit veniam.</p>
+                                <a href="" class="btn btn-outline-success pemisah baca">Baca Selengkapnya</a>
+                            </div>
+                        </div>
+                        <div class="card mt-5">
+                            <img src="/naturtea-template/asset/img/gmbr/artikel.jpeg" alt="" class="card-img-top border-dark border-right border-bottom">
+                            <div class="card-body">
+                                <h2 class="card-title unique">Pengembangan Lahan Kebun Teh Semakin Berkembang.</h2>
+                                <p class="card-text support">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore quisquam doloribus non nemo, quos nam nostrum voluptas nisi numquam nobis molestias, commodi et beatae, totam nihil consequuntur obcaecati eaque. Nesciunt?</p>
+                                <a href="" class="btn btn-outline-success pemisah baca">Baca Selengkapnya</a>
+                            </div>
+                        </div>
+                        <div class="Page navigation example page-nav">
+                            <ul class="pagination justify-content-center">
+                                <li class="page-item disabled">
+                                    <a href="" class="page-link">
+                                        <span>&laquo;</span>
+                                        <span class="sr-only">Previous</span>
+                                    </a>
+                                </li>
+                                <li class="page-item">
+                                    <a href="" class="page-link">1</a>
+                                </li>
+                                <li class="page-item">
+                                    <a href="" class="page-link">2</a>
+                                </li>
+                                <li class="page-item">
+                                    <a href="" class="page-link">3</a>
+                                </li>
+                                <li class="page-item">
+                                    <a href="" class="page-link">
+                                        <span>&raquo;</span>
+                                        <span class="sr-only">Next</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="col-sm-3">
             <div class="menu">
                 <div class="container">
-                    <p>SIDE KANAN.</p>
+                    <div class="card">
+                        <div class="card-header">
+                            <h2>Fitur</h2>
+                        </div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">Responsive</li>
+                            <li class="list-group-item">Ringan</li>
+                            <li class="list-group-item">Menggunakan Landing Page</li>
+                        </ul>
+                    </div>
+                    <br>
+                    <br>
+                    <div class="card">
+                        <div class="card-header">
+                            <h2>Navigasi</h2>
+                        </div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">
+                                <a class="list-link" href="http://localhost/naturtea-template/">Halaman Landing Page</a>
+                            </li>
+                            <li class="list-group-item">
+                                <a class="list-link" href="">Link 1</a>
+                            </li>
+                            <li class="list-group-item">
+                                <a  class="list-link" href="">Link 2</a>
+                            </li>
+                            <li class="list-group-item">
+                                <a  class="list-link" href="">Link 3</a>
+                            </li>
+                            <li class="list-group-item">
+                                <a  class="list-link" href="http://github.com/Zuma903/" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i> Zuma903</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
+    <footer>
+        <div class="container-fluid">
+            <div class="row align-items-center pt-3">
+                <div class="col-md-4">
+                    <h2 class="display-6">Alamat</h2>
+                    <ul class="list-unstyled">
+                        <li class="pb-2"><i class="fa fa-location-arrow"></i> Jl. PLTU Tanjung Jati B Kaliaman Kembang, Jepara</li>
+                        <li class="pb-2"><i class="fas fa-envelope"></i> rahmatwahyumaakbar@gmail.com</li>
+                        <li><i class="fa fa-phone"></i> +61 812 2538 9903</li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <h2 class="display-6">Navigasi</h2>
+                    <ul class="list-unstyled">
+                        <li>
+                            <a href="" class="btn pt-0">Download Template</a>
+                        </li>
+                        <li>
+                            <a href="" class="btn pt-0">Masuk Halaman</a>
+                        </li>
+                        <li>
+                            <a href="" class="btn pt-0">Naik Ke Atas</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <h2 class="display-6">Filosofi Teh</h2>
+                    <p class="support">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat dolorem voluptate atque quasi, officiis ratione nisi architecto eius inventore soluta impedit. Velit nesciunt officia iste mollitia magni maxime cumque aliquid.</p>
+                </div>
+            </div>
+        </div>
+        <div class="logo">
+            <div class="container">
+                <div class="row text-center">
+                    <div style="font-size: 25px; letter-spacing: 1cm; padding: 0.3cm ;" class="col logogo">
+                        <a href="" target="_blank" rel="noopener noreferrer"><i style="color: rgb(255, 0, 43);" class="fab fa-instagram"></i></a>
+                        <a href="" target="_blank" rel="noopener noreferrer"><i style="color: rgb(0, 0, 168);" class="fab fa-facebook"></i></a>
+                        <a href="" target="_blank" rel="noopener noreferrer"><i style="color: red;" class="fab fa-youtube"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="copyright text-center">
+            <p>&copy; Copyright 2019. by <i class="fab fa-github"></i><a class="text-white" href="http://github.com/Zuma903" target="_blank" rel="noopener noreferrer"> ZumaAkbar</a></p>
+        </div>
+    </footer>
+
+    <script src="/naturtea-template/asset/style/navbar.js"></script>
     <script src="/naturtea-template/asset/js/fontawesome.min.js"></script>
     <script src="/naturtea-template/asset/js/jquery-3.4.1.min.js"></script>
     <script src="/naturtea-template/asset/js/popper.min.js"></script>
